[package]
name = "learn-http"
version = "0.1.0"
authors = ["kawakami <kawakami.ozone@gmail.com>"]
edition = "2018"

[[bin]]
name = "http-server"
path = "src/http-server.rs"

[[bin]]
name = "http-client"
path = "src/http-client.rs"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
base64 = "0.10.1"
